--- a/lesson-4/lesson-4-css-hard/css/style.css
+++ b/lesson-4/lesson-4-css-hard/css/style.css
@@ -18,24 +18,25 @@ body {
 }
 
 #nav {
+    width: 100%;
     padding-top: 20px;
     background-color: black;
 }
 
-
 .img-h {
     width: 200px;
     height: 125px;
-    padding-left: 135px;
+    margin-left: 9%;
 }
 
 #wrd-links {
-    margin-left: 210px;
+    width: 100%;
+    margin-left: 15%;
     font-size: 18px;
 }
 
 .link-i {
-    padding-left: 285px;
+    margin-left: 18.7%;
     text-decoration: none;
     color: wheat;
 }
