--- a/lesson-4/lesson-4-css-hard/css/style.css
+++ b/lesson-4/lesson-4-css-hard/css/style.css
@@ -18,33 +18,35 @@ body {
 }
 
 #nav {
+    text-align: center;
     width: 100%;
+    height: 150px;
     padding-top: 20px;
-    background-color: black;
+    background-color: black;   
+}
+
+.img-d {
+    float:left;
+    margin-left: 7%;
 }
 
 .img-h {
     width: 200px;
-    height: 125px;
-    margin-left: 9%;
+    height: 125px;   
 }
 
-#wrd-links {
-    width: 100%;
-    margin-left: 15%;
+.a-nav-d {
+    text-decoration: none;
+    color: wheat;
     font-size: 18px;
 }
 
-.link-i {
-    margin-left: 18.7%;
-    text-decoration: none;
-    color: wheat;
-}
+
 
 /*main*/
 #main {
     width: 100%;
-    height: 342px;
+    height: 352px;
     margin-top: 10px;
 }
 
@@ -63,7 +65,7 @@ body {
 #center-m {
     float: left;
     height: 350px;
-    width: 67%;
+    width: 70%;
     font-size: 18px;
     margin-left: 5px;
     margin-right: 5px;
@@ -73,7 +75,7 @@ body {
 #right-m {
     float: left;
     height: 350px;
-    width: 15%;
+    width: 12%;
     background-color: rgb(150,146,134);
     font-size: 18px;
 }
